--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 	<script src="script.js" defer></script>
 </head>
 <body>
-	<header><h1>Etch-A-Sketch</h1></header>
+	<header>
+		<h1>Etch-A-Sketch</h1>
+		<button id="erase">Erase</button>
+		<button id="resize">Resize</button>
+	</header>
 	<main></main>
 </body>
 </html>
