--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 </head>
 <body>
 	<header>
-		<h1>Etch-A-Sketch</h1>
-		<button id="erase">Erase</button>
-		<button id="resize">Resize</button>
+
 	</header>
-	<main></main>
+	<main>
+		<h1>Etch-A-Sketch</h1>
+		<div id="etch-pad"></div>
+		<div class="button-dials">
+			<button id="erase">Shake</button>
+			<button id="resize">Resize</button>
+		</div>
+
+	</main>
 </body>
 </html>
