Add shake effect

--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
 	<script src="script.js" defer></script>
 </head>
 <body>
-	<header>
-
-	</header>
 	<main>
 		<h1>Etch-A-Sketch</h1>
-		<div id="etch-pad"></div>
+		<div id="etch-screen"></div>
 		<div class="button-dials">
 			<button id="erase">Shake</button>
 			<button id="resize">Resize</button>
 		</div>
-
 	</main>
 </body>
 </html>
